# cfmdc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cliff.toml  config.toml.example  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  reusable-build.yml
cmake/: CopyCTP.cmake  FindCTP.cmake  FindVCPKG.cmake
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  CONFIG_GUIDE.md  STORAGE_DESIGN.md
include/cfmdc/config/: Config.h
include/cfmdc/core/: Application.h  MdSpi.h  SubscriptionTracker.h  TraderSpi.h
include/cfmdc/types/: FrontServer.h  StorageMode.h
include/cfmdc/utils/: ApiWrapper.h  Constants.h  CsvWriter.h  Error.h  FileManager.h  Helpers.h  IMarketDataWriter.h  LockFreeQueue.h  MarketDataTimePolicy.h  ParquetWriter.h  TimeUtils.h
src/: main.cpp
src/config/: Config.cpp
src/core/: Application.cpp  MdSpi.cpp  TraderSpi.cpp
src/utils/: ApiWrapper.cpp  CsvWriter.cpp  FileManager.cpp  ParquetWriter.cpp
tests/: CMakeLists.txt  test_config.cpp  test_constants.cpp  test_error.cpp  test_file_manager.cpp  test_lock_free_queue.cpp  test_market_data_time_policy.cpp  test_subscription_tracker.cpp
